modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="contaner"  style="height: 100px">Test block
+        <div class="row" style="background-color:seagreen; height: 50px">What is this magic top row</div>
+        <div class="row" style="background-color: darkmagenta; height: 50px">Whichcraft style top row</div>
+    </div>
+    <div class="container" id="blue" style="height: 100px">Test block
+        <div class="row" style="padding: 4px; background-color:seagreen; height: 50px">What is this magic</div>
+        <div class="row" style="padding: 4px; background-color: darkmagenta; height: 50px">Whichcraft style</div>
+    </div>
+    <div class="article"></div>
     <h1 class="text-success">Hello World!</h1>
     <button id="one" class="btn btn-danger">Click Me!</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
